      \item \code{getprecip()} now changes the timeout R options temporarily so as to avoid the download to fail because the default timeout setting is too short (#148).
      \item the documentation for the datasets \code{GNIPDataALLagg} and \code{GNIPDataEUagg} was incorrect (#158).
    }
  }
  \subsection{Geeky change}{
    \itemize{
      \item \code{OceanMask} and \code{CountryBorders} are no longer stored as RDA files in \code{/data}, but as RDS files in \code{/extata} since objects created with \pkg{terra} cannot be saved as RDA files. These files are automatically loaded when the package is attached.
      \item \pkg{elevatr} moved from Imports to Suggests (#157)
    }
  }
}

\section{version 0.9}{
  \subsection{Solved BUGS}{
    \itemize{
      \item the previous released introduced an error in how the variance of the assignment test is computed in the absence of calibration (with important consequence in terms of assignments). This is now fixed (#151).
    }
  }
  \subsection{Minor change}{
    \itemize{
      \item the base package 'colourspace' is now suggested to avoid a note in R CMD check.
    }
  }
}

\section{version 0.8.3}{
  \subsection{New features}{
    \itemize{
      \item the function `calibfit()` gains an argument method that allows for selecting one of four calibration methods ("wild", "lab", "desk", "desk_inverse"). This allows for users to use 1) calibration samples associated with unknown environmental isotopic values, 2) calibration samples associated with known environmental isotopic values, or 3 & 4) the intercept and slope of a calibration relationship computed by others (e.g. values found in a paper). Note: the desk* methods allow for the consideration of a fractionaction factor too (i.e. slope = 0). See \code{calibfit} for details. (#20 & #142)